[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nip-krs-mcp"
version = "0.1.0"
description = "Local MCP server for Polish company registries — Biała Lista VAT, KRS, REGON lookups by NIP."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bartosz Kuć", email = "firma@bartosza.pl" }]
keywords = ["mcp", "nip", "krs", "vat", "poland", "companies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/bartosz-kuc/nip-krs-mcp"
Repository = "https://github.com/bartosz-kuc/nip-krs-mcp"
Issues = "https://github.com/bartosz-kuc/nip-krs-mcp/issues"

[project.scripts]
nip-krs-mcp = "nip_krs_mcp:sync_main"

[tool.hatch.build.targets.wheel]
sources = ["."]
only-include = ["server.py"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "nip_krs_mcp.py"

[tool.hatch.build.targets.sdist]
include = ["server.py", "README.md", "LICENSE", "SECURITY.md", "pyproject.toml"]
